# striper

./: .env.example  .gitignore  LICENSE  PLAN.md  PR_DRAFT.md  README.md  WEBSITE_FLOW_PLAN.md  pyproject.toml  requirements.txt
app/: __init__.py  ai_analysis.py  auth.py  database.py  main.py  models.py  openai_client.py  stripe.py
static/: app.js  index.html
tests/: __init__.py  test_ai_analysis.py  test_auth.py  test_database.py  test_main.py  test_openai_client.py  test_stripe.py
